--- a/CurrencyScope/app/src/main/res/layout/fragment_currency_details.xml
+++ b/CurrencyScope/app/src/main/res/layout/fragment_currency_details.xml
@@ -4,6 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:background="@color/white"
+    android:clickable="true"
+    android:focusable="true"
     tools:context=".presentation.fragments.CurrencyDetailsFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -11,166 +15,215 @@
         android:layout_height="match_parent">
 
         <ImageView
-            android:id="@+id/imageView2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:id="@+id/imageCurrencyIcon"
+            android:layout_width="62dp"
+            android:layout_height="64dp"
+            android:layout_marginTop="16dp"
             android:src="@drawable/default_currency"
-            tools:layout_editor_absoluteX="19dp"
-            tools:layout_editor_absoluteY="88dp" />
+            app:layout_constraintEnd_toStartOf="@+id/textCurrencyName"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/textView2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="TextView"
-            tools:layout_editor_absoluteX="196dp"
-            tools:layout_editor_absoluteY="102dp" />
+            android:id="@+id/textCurrencyName"
+            android:layout_width="246dp"
+            android:layout_height="95dp"
+            android:layout_marginTop="16dp"
+            android:text="Фунт стерлингов Соединенного королевства"
+            android:textAlignment="center"
+            android:textSize="24sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.672"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/textView3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="TextView"
-            tools:layout_editor_absoluteX="24dp"
-            tools:layout_editor_absoluteY="165dp" />
+            android:id="@+id/textCurrencyCharCode"
+            android:layout_width="62dp"
+            android:layout_height="31dp"
+            android:text="GBR"
+            android:textAlignment="center"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toBottomOf="@+id/textCurrencyName"
+            app:layout_constraintEnd_toEndOf="@+id/imageCurrencyIcon"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="@+id/imageCurrencyIcon"
+            app:layout_constraintTop_toBottomOf="@+id/imageCurrencyIcon"
+            app:layout_constraintVertical_bias="0.0" />
 
         <TextView
-            android:id="@+id/textView4"
+            android:id="@+id/textNominal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="TextView"
-            tools:layout_editor_absoluteX="38dp"
-            tools:layout_editor_absoluteY="222dp" />
+            android:layout_marginStart="44dp"
+            android:layout_marginTop="52dp"
+            android:text="Номинал"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textCurrencyName" />
 
         <TextView
-            android:id="@+id/textView5"
+            android:id="@+id/textCurrencyRateLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="TextView"
-            tools:layout_editor_absoluteX="39dp"
-            tools:layout_editor_absoluteY="278dp" />
+            android:layout_marginStart="48dp"
+            android:layout_marginTop="24dp"
+            android:text="Курс"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textNominal" />
 
         <TextView
-            android:id="@+id/textView6"
+            android:id="@+id/textNominalValue"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="TextView"
-            tools:layout_editor_absoluteX="303dp"
-            tools:layout_editor_absoluteY="225dp" />
+            android:layout_marginEnd="96dp"
+            android:text="100"
+            app:layout_constraintBottom_toBottomOf="@+id/textNominal"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/textNominal"
+            app:layout_constraintVertical_bias="0.0" />
 
         <TextView
-            android:id="@+id/textView7"
+            android:id="@+id/textCurrencyRateValue"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="TextView"
-            tools:layout_editor_absoluteX="298dp"
-            tools:layout_editor_absoluteY="275dp" />
+            android:layout_marginEnd="76dp"
+            android:text="100.0000"
+            app:layout_constraintBottom_toBottomOf="@+id/textCurrencyRateLabel"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/textCurrencyRateLabel"
+            app:layout_constraintVertical_bias="1.0" />
 
         <TextView
-            android:id="@+id/textView8"
+            android:id="@+id/textCurrencyChange"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="TextView"
-            tools:layout_editor_absoluteX="246dp"
-            tools:layout_editor_absoluteY="303dp" />
-
-        <TextView
-            android:id="@+id/textView9"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="TextView"
-            tools:layout_editor_absoluteX="318dp"
-            tools:layout_editor_absoluteY="297dp" />
+            android:text="+10.0000 +100.00%"
+            app:layout_constraintEnd_toEndOf="@+id/textCurrencyRateValue"
+            app:layout_constraintStart_toStartOf="@+id/textCurrencyRateValue"
+            app:layout_constraintTop_toBottomOf="@+id/textCurrencyRateValue" />
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/buttonAddToFavorites"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Button"
-            tools:layout_editor_absoluteX="155dp"
-            tools:layout_editor_absoluteY="346dp" />
+            android:layout_marginTop="24dp"
+            android:text="Добавить в избранное"
+            android:visibility="visible"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.511"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textCurrencyChange" />
+
+        <Button
+            android:id="@+id/buttonDeleteFromFavorites"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            android:text="Удалить из избранного"
+            android:visibility="gone"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.497"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textCurrencyChange" />
 
         <TextView
-            android:id="@+id/textView10"
+            android:id="@+id/textConverter"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="TextView"
-            tools:layout_editor_absoluteX="168dp"
-            tools:layout_editor_absoluteY="422dp" />
+            android:layout_marginTop="20dp"
+            android:text="Конвертер"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.498"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/buttonAddToFavorites" />
 
         <EditText
-            android:id="@+id/editTextText"
+            android:id="@+id/editTextAmountLeft"
             android:layout_width="143dp"
             android:layout_height="42dp"
+            android:layout_marginStart="36dp"
+            android:layout_marginTop="16dp"
             android:ems="10"
-            android:inputType="text"
-            android:text="Name"
-            tools:layout_editor_absoluteY="450dp" />
+            android:inputType="number|numberDecimal"
+            android:text="1"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textConverter" />
 
-        <EditText
-            android:id="@+id/editTextText2"
-            android:layout_width="137dp"
-            android:layout_height="47dp"
-            android:ems="10"
-            android:inputType="text"
-            android:text="Name"
-            tools:layout_editor_absoluteX="258dp"
-            tools:layout_editor_absoluteY="441dp" />
-
-        <ImageView
-            android:id="@+id/imageView3"
+        <Button
+            android:id="@+id/buttonSwapCurrencies"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/default_currency"
-            tools:layout_editor_absoluteX="173dp"
-            tools:layout_editor_absoluteY="470dp" />
+            android:layout_marginTop="56dp"
+            android:text="Поменять"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textConverter" />
 
         <ImageView
-            android:id="@+id/imageView4"
+            android:id="@+id/imageLeft"
             android:layout_width="24dp"
             android:layout_height="30dp"
-            android:src="@drawable/default_currency"
-            tools:layout_editor_absoluteX="14dp"
-            tools:layout_editor_absoluteY="504dp" />
+            android:src="@drawable/rus"
+            app:layout_constraintStart_toStartOf="@+id/editTextAmountLeft"
+            app:layout_constraintTop_toBottomOf="@+id/editTextAmountLeft" />
 
         <ImageView
-            android:id="@+id/imageView5"
+            android:id="@+id/imageRight"
             android:layout_width="36dp"
             android:layout_height="39dp"
             android:src="@drawable/default_currency"
-            tools:layout_editor_absoluteX="356dp"
-            tools:layout_editor_absoluteY="492dp" />
+            app:layout_constraintStart_toStartOf="@+id/textAmountRight"
+            app:layout_constraintTop_toBottomOf="@+id/textAmountRight" />
 
         <TextView
-            android:id="@+id/textView11"
+            android:id="@+id/textCharCodeLeft"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="TextView"
-            tools:layout_editor_absoluteX="53dp"
-            tools:layout_editor_absoluteY="503dp" />
+            android:text="RUB"
+            app:layout_constraintStart_toEndOf="@+id/imageLeft"
+            app:layout_constraintTop_toBottomOf="@+id/editTextAmountLeft" />
 
         <TextView
-            android:id="@+id/textView12"
+            android:id="@+id/textCharCodeRight"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="TextView"
-            tools:layout_editor_absoluteX="278dp"
-            tools:layout_editor_absoluteY="502dp" />
+            android:text="GBR"
+            app:layout_constraintStart_toEndOf="@+id/imageRight"
+            app:layout_constraintTop_toBottomOf="@+id/textAmountRight" />
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/buttonConvert"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Button"
-            tools:layout_editor_absoluteX="162dp"
-            tools:layout_editor_absoluteY="539dp" />
+            android:layout_marginTop="28dp"
+            android:text="Конвертировать"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.498"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/buttonSwapCurrencies" />
 
         <Button
-            android:id="@+id/button3"
+            android:id="@+id/buttonGoBack"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Button"
-            tools:layout_editor_absoluteX="160dp"
-            tools:layout_editor_absoluteY="661dp" />
+            android:layout_marginTop="36dp"
+            android:text="Вернуться"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.498"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/buttonConvert" />
+
+        <TextView
+            android:id="@+id/textAmountRight"
+            android:layout_width="109dp"
+            android:layout_height="39dp"
+            android:layout_marginEnd="24dp"
+            android:text="1"
+            app:layout_constraintBottom_toBottomOf="@+id/editTextAmountLeft"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/editTextAmountLeft"
+            app:layout_constraintVertical_bias="1.0" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
