--- a/CurrencyScope/app/src/main/res/layout/fragment_currency_list.xml
+++ b/CurrencyScope/app/src/main/res/layout/fragment_currency_list.xml
@@ -81,10 +81,10 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:fitsSystemWindows="true"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 
         <LinearLayout
             android:id="@+id/linearLayout"
